--- a/package.nuspec
+++ b/package.nuspec
@@ -9,16 +9,16 @@
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>https://github.com/open-epicycle/Epicycle.Graphics-cs</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Epicycle .NET graphics library. Includes: TODO
+    <description>Epicycle .NET graphics library. Includes: Platform-independent image library and color infrastructure.
 
 * Details &amp; release notes: https://github.com/open-epicycle/Epicycle.Graphics-cs/blob/ver-$version$/README.md
 * Sources: https://github.com/open-epicycle/Epicycle.Graphics-cs/tree/ver-$version$
 * Git repository: https://github.com/open-epicycle/Epicycle.Graphics-cs</description>
-    <summary>TODO</summary>
+    <summary>Epicycle .NET graphics library. Includes: Platform-independent image library and color infrastructure.</summary>
     <releaseNotes>https://github.com/open-epicycle/Epicycle.Graphics-cs/blob/ver-$version$/README.md</releaseNotes>
     <copyright>Copyright 2015 Epicycle</copyright>
     <language />
-    <tags>epicycle graphics TODO</tags>
+    <tags>epicycle graphics image bitmap views color</tags>
 
     <dependencies>
       <dependency id="Epicycle.Commons-cs" version="0.1.5.0" />
