--- a/projects/Epicycle.Graphics.Windows_cs/Epicycle.Graphics.Windows_cs.net35.csproj
+++ b/projects/Epicycle.Graphics.Windows_cs/Epicycle.Graphics.Windows_cs.net35.csproj
@@ -65,7 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ImageUtils.cs" />
+    <Compile Include="Images\ImageUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
