--- a/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net35.csproj
+++ b/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net35.csproj
@@ -63,8 +63,15 @@
     <Reference Include="Epicycle.Math_cs">
       <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net35\Epicycle.Math_cs.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\..\externals\NuGet\Moq.4.2.1409.1722\lib\net35\Moq.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\externals\NuGet\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Color4bTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
