--- a/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net45.csproj
+++ b/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net45.csproj
@@ -69,9 +69,13 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\externals\NuGet\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="YamlDotNet">
+      <HintPath>..\..\externals\NuGet\YamlDotNet.3.5.0\lib\net35\YamlDotNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Color4bTest.cs" />
+    <Compile Include="Color4bUtilsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
