--- a/projects/Epicycle.Graphics.Platform.SystemDrawing_cs/Epicycle.Graphics.Platform.SystemDrawing_cs.net35.csproj
+++ b/projects/Epicycle.Graphics.Platform.SystemDrawing_cs/Epicycle.Graphics.Platform.SystemDrawing_cs.net35.csproj
@@ -7,34 +7,34 @@
     <ProjectGuid>{556A9D71-0802-42CE-B110-5C2FB6B51388}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Epicycle.Graphics.Windows</RootNamespace>
-    <AssemblyName>Epicycle.Graphics.Windows_cs</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Epicycle.Graphics.Platform.SystemDrawing</RootNamespace>
+    <AssemblyName>Epicycle.Graphics.Platform.SystemDrawing_cs</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\bin\net45\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;NET45</DefineConstants>
+    <OutputPath>..\..\bin\net35\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;NET35</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\bin\net45\Debug\Epicycle.Graphics.Windows_cs.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\net35\Debug\Epicycle.Graphics.Platform.SystemDrawing_cs.xml</DocumentationFile>
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>..\..\bin\net45\Release\</OutputPath>
-    <DefineConstants>TRACE;NET45</DefineConstants>
+    <OutputPath>..\..\bin\net35\Release\</OutputPath>
+    <DefineConstants>TRACE;NET35</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\bin\net45\Debug\Epicycle.Graphics.Windows_cs.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\net35\Debug\Epicycle.Graphics.Platform.SystemDrawing_cs.xml</DocumentationFile>
     <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
@@ -46,22 +46,22 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Drawing" />
     <Reference Include="Epicycle.Commons.TestUtils_cs">
-      <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.5.0\lib\net45\Epicycle.Commons.TestUtils_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.5.0\lib\net35\Epicycle.Commons.TestUtils_cs.dll</HintPath>
     </Reference>
     <Reference Include="Epicycle.Commons_cs">
-      <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.5.0\lib\net45\Epicycle.Commons_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.5.0\lib\net35\Epicycle.Commons_cs.dll</HintPath>
     </Reference>
     <Reference Include="clipper_library">
-      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net45\clipper_library.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net35\clipper_library.dll</HintPath>
     </Reference>
     <Reference Include="Epicycle.Math.TestUtils_cs">
-      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net45\Epicycle.Math.TestUtils_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net35\Epicycle.Math.TestUtils_cs.dll</HintPath>
     </Reference>
     <Reference Include="Epicycle.Math.Windows_cs">
-      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net45\Epicycle.Math.Windows_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net35\Epicycle.Math.Windows_cs.dll</HintPath>
     </Reference>
     <Reference Include="Epicycle.Math_cs">
-      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net45\Epicycle.Math_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.2.0\lib\net35\Epicycle.Math_cs.dll</HintPath>
     </Reference>
     <Reference Include="YamlDotNet">
       <HintPath>..\..\externals\NuGet\YamlDotNet.3.5.0\lib\net35\YamlDotNet.dll</HintPath>
@@ -75,7 +75,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Epicycle.Graphics_cs\Epicycle.Graphics_cs.net45.csproj">
+    <ProjectReference Include="..\Epicycle.Graphics_cs\Epicycle.Graphics_cs.net35.csproj">
       <Project>{0ad4324b-56f0-445b-968f-9ee578b8f34c}</Project>
       <Name>Epicycle.Graphics_cs</Name>
     </ProjectReference>
