Adding Epicycle.Graphics.Geometry.Ply that is capable of writing PLY files

--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
@@ -67,6 +67,13 @@
   <ItemGroup>
     <Compile Include="Color4b.cs" />
     <Compile Include="Color4bUtils.cs" />
+    <Compile Include="Geometry\Ply\IPlyData.cs" />
+    <Compile Include="Geometry\Ply\PlyData.cs" />
+    <Compile Include="Geometry\Ply\PlyEdge.cs" />
+    <Compile Include="Geometry\Ply\PlyElement.cs" />
+    <Compile Include="Geometry\Ply\PlyFace.cs" />
+    <Compile Include="Geometry\Ply\PlyUtils.cs" />
+    <Compile Include="Geometry\Ply\PlyVertex.cs" />
     <Compile Include="Images\IImage.cs" />
     <Compile Include="Images\IImageByte.cs" />
     <Compile Include="Images\IImageFloat.cs" />
