--- a/package.nuspec
+++ b/package.nuspec
@@ -18,7 +18,7 @@
     <releaseNotes>https://github.com/open-epicycle/Epicycle.Graphics-cs/blob/ver-$version$/README.md</releaseNotes>
     <copyright>Copyright 2015 Epicycle</copyright>
     <language />
-    <tags>epicycle graphics image bitmap views color</tags>
+    <tags>epicycle graphics image bitmap views color ply</tags>
 
     <dependencies>
       <dependency id="Epicycle.Commons-cs" version="0.1.5.0" />
