--- a/projects/Epicycle.Graphics.Android_cs/Epicycle.Graphics.Android_cs.csproj
+++ b/projects/Epicycle.Graphics.Android_cs/Epicycle.Graphics.Android_cs.csproj
@@ -45,11 +45,11 @@
     <Reference Include="Epicycle.Graphics_cs">
       <HintPath>..\..\bin\win\Release\Epicycle.Graphics_cs.dll</HintPath>
     </Reference>
-    <Reference Include="Epicycle.Math_cs">
-      <HintPath>..\..\externals\lib\Epicycle.Math-cs\Epicycle.Math_cs.dll</HintPath>
-    </Reference>
     <Reference Include="Epicycle.Commons_cs">
-      <HintPath>..\..\externals\lib\Epicycle.Commons-cs\Epicycle.Commons_cs.dll</HintPath>
+      <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.6.0\lib\net45\Epicycle.Commons_cs.dll</HintPath>
+    </Reference>
+    <Reference Include="Epicycle.Math_cs">
+      <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.3.0\lib\net45\Epicycle.Math_cs.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
