--- a/projects/Epicycle.Graphics.Platform.Android_cs/Epicycle.Graphics.Platform.Android_cs.csproj
+++ b/projects/Epicycle.Graphics.Platform.Android_cs/Epicycle.Graphics.Platform.Android_cs.csproj
@@ -6,13 +6,13 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{A0BC6FD6-D189-4F37-9B91-75F82004284E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Epicycle.Graphics.Android</RootNamespace>
+    <RootNamespace>Epicycle.Graphics.Platform.Android</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
-    <AssemblyName>Epicycle.Graphics.Android_cs</AssemblyName>
+    <AssemblyName>Epicycle.Graphics.Platform.Android_cs</AssemblyName>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -42,14 +42,14 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
-    <Reference Include="Epicycle.Graphics_cs">
-      <HintPath>..\..\bin\win\Release\Epicycle.Graphics_cs.dll</HintPath>
-    </Reference>
     <Reference Include="Epicycle.Commons_cs">
       <HintPath>..\..\externals\NuGet\Epicycle.Commons-cs.0.1.6.0\lib\net45\Epicycle.Commons_cs.dll</HintPath>
     </Reference>
     <Reference Include="Epicycle.Math_cs">
       <HintPath>..\..\externals\NuGet\Epicycle.Math-cs.0.1.3.0\lib\net45\Epicycle.Math_cs.dll</HintPath>
+    </Reference>
+    <Reference Include="Epicycle.Graphics_cs">
+      <HintPath>..\..\bin\net45\Release\Epicycle.Graphics_cs.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
