--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
@@ -66,7 +66,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColorRGB.cs" />
+    <Compile Include="ColorRGB12.cs" />
+    <Compile Include="ColorRGB16.cs" />
     <Compile Include="ColorRGBA.cs" />
+    <Compile Include="ColorRGBA12.cs" />
+    <Compile Include="ColorRGBA16.cs" />
     <Compile Include="ColorRGBAUtils.cs" />
     <Compile Include="Geometry\Ply\IPlyData.cs" />
     <Compile Include="Geometry\Ply\IPlyParametersParser.cs" />
