--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
@@ -65,13 +65,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColorRGB.cs" />
-    <Compile Include="ColorRGB12.cs" />
-    <Compile Include="ColorRGB16.cs" />
-    <Compile Include="ColorRGBA.cs" />
-    <Compile Include="ColorRGBA12.cs" />
-    <Compile Include="ColorRGBA16.cs" />
-    <Compile Include="ColorRGBAUtils.cs" />
+    <Compile Include="Color\ColorRGB.cs" />
+    <Compile Include="Color\ColorRGB12.cs" />
+    <Compile Include="Color\ColorRGB16.cs" />
+    <Compile Include="Color\ColorRGBA.cs" />
+    <Compile Include="Color\ColorRGBA12.cs" />
+    <Compile Include="Color\ColorRGBA16.cs" />
+    <Compile Include="Color\ColorRGBAUtils.cs" />
     <Compile Include="Geometry\Ply\IPlyData.cs" />
     <Compile Include="Geometry\Ply\IPlyParametersParser.cs" />
     <Compile Include="Geometry\Ply\PlyData.cs" />
