--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Color\ColorRGBA12.cs" />
     <Compile Include="Color\ColorRGBA16.cs" />
     <Compile Include="Color\ColorRGBAUtils.cs" />
-    <Compile Include="Color\Conversion\RGBToHSx.cs" />
+    <Compile Include="Color\Spaces\HSxUtils.cs" />
     <Compile Include="Geometry\Ply\IPlyData.cs" />
     <Compile Include="Geometry\Ply\IPlyParametersParser.cs" />
     <Compile Include="Geometry\Ply\PlyData.cs" />
