--- a/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net45.csproj
+++ b/projects/Epicycle.Graphics_cs-Test/Epicycle.Graphics_cs-Test.net45.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Color\ColorRGBATest.cs" />
     <Compile Include="Color\ColorRGBAUtilsTest.cs" />
     <Compile Include="Color\Spaces\HSxUtilsTest.cs" />
+    <Compile Include="Color\Spaces\RYBUtilsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
