--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net40.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Color\ColorRGBA16.cs" />
     <Compile Include="Color\ColorRGBAUtils.cs" />
     <Compile Include="Color\Spaces\HSxUtils.cs" />
+    <Compile Include="Color\Spaces\RYBUtils.cs" />
     <Compile Include="Geometry\Ply\IPlyData.cs" />
     <Compile Include="Geometry\Ply\IPlyParametersParser.cs" />
     <Compile Include="Geometry\Ply\PlyData.cs" />
