--- a/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
+++ b/projects/Epicycle.Graphics_cs/Epicycle.Graphics_cs.net35.csproj
@@ -75,10 +75,12 @@
     <Compile Include="Color\Spaces\CieLabUtils.cs" />
     <Compile Include="Color\Spaces\CieLuvUtils.cs" />
     <Compile Include="Color\Spaces\CieXYZUtils.cs" />
+    <Compile Include="Color\Spaces\ColorCompandingFunction.cs" />
     <Compile Include="Color\Spaces\ColorCompandingUtils.cs" />
     <Compile Include="Color\Spaces\HSxUtils.cs" />
     <Compile Include="Color\Spaces\LChUtils.cs" />
     <Compile Include="Color\Spaces\LxyModel.cs" />
+    <Compile Include="Color\Spaces\RGBColorSystem.cs" />
     <Compile Include="Color\Spaces\RYBUtils.cs" />
     <Compile Include="Geometry\Ply\IPlyData.cs" />
     <Compile Include="Geometry\Ply\IPlyParametersParser.cs" />
